--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pistas Jacarilla</title>
-    <link rel="stylesheet" href="registro.css">
+    <link rel="stylesheet" href="inicioSesion.css">
 </head>
 <body>
 
-    <div class="registro">
-        <h2>Crear cuenta</h2>
+    <div class="inicioSesion">
+        <h2>Iniciar sesión</h2>
         <form>
-            <input type="text" placeholder="Nombre de usuario" required>
             <input type="email" placeholder="Correo electrónico" required>
             <input type="password" placeholder="Contraseña" required>
-            <input type="password" placeholder="Confirmar contraseña" required>
-            <button type="submit">Registrarse</button>
+            <button type="submit">Entrar</button>
         </form>
-        <p>¿Ya tienes cuenta? <a href="inicioSesion.html">Inicia sesión</a></p>
+        <p>¿No tienes cuenta? <a href="registro.html">Regístrate</a></p>
     </div>
 
 </body>
